--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ authors = ["Sebastian K <s3bk@protonmail.com>"]
 edition = "2018"
 
 [dependencies]
-pdf = { git = "https://github.com/pdf-rs/pdf" }
+pdf = { git = "https://github.com/pdf-rs/pdf", features = [ "euclid" ] }
 pdf_encoding = "*"
 byteorder = "*"
+euclid = "0.22.6"
 utf16-ext = "*"
 log = "*"
